# pokervision

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  train.ipynb
notebooks/: main.ipynb  train.ipynb
res/sprites/: atlas.txt
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
runs/detect/train3/: args.yaml  results.csv
src/: main.py
src/card_detection/: __init__.py  analysis_funcs.py  card.py  hand.py
src/poker_app/: app.py  main.py
src/poker_app/utils/: __init__.py  asset_loader.py  camera.py
src/poker_app/widgets/: __init__.py  card_display.py  menu_bar.py  settings_window.py  viewport.py
src/poker_vision/: app.py  main.py
src/poker_vision/card_detector/: __init__.py  analysis_funcs.py  card_prediction.py
